fix: pip button wrapping, cover size

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -224,3 +224,7 @@
     order: 2;
   }
 }
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
